@@ -17510,3 +17510,6 @@ failed: wireguard over ipv6
 ---------------------------------- 2025-09-01 22:45:31 25.9.1
 no failed: wireguard over ipv6
 qc pass: wireguard over ipv6
+---------------------------------- 2025-09-03 14:19:10 25.9.3
+no qc pass: wireguard over wireguard
+failed: wireguard over wireguard
